--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <title>Redirection</title>
 
-<meta http-equiv="refresh" content="0; URL=http://www.manouvelleadresse.com">
+<meta http-equiv="refresh" content="0; URL=http://ariiportal.github.io/ariiportal.github.io">
 </head>
 
 <body>
